# allocators

./: .gitignore  LICENSE  README  README.md  free-list-alloc-repo.cabal
.github/workflows/: ci.yaml
src/: free-list-alloc.hs
src/main/: FreeListAllocator.hs  free-list-alloc.hs
src/test/: FreeListAllocatorTests.hs
